feat: get retries count
